--- a/samples/ScryfallApi.WebSample/Pages/Shared/_Layout.cshtml
+++ b/samples/ScryfallApi.WebSample/Pages/Shared/_Layout.cshtml
@@ -31,6 +31,7 @@
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
           <li><a asp-page="/Index">Home</a></li>
+          <li><a asp-page="/Search">Search</a></li>
         </ul>
       </div>
     </div>
